loadbalancer/IngressRoute-cilium-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cilium-dashboard-route
  namespace: loadbalancer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cni.anderwerse.de`)
      services:
        - name: hubble-ui
          namespace: kube-system
          port: 80
  tls:
    secretName: anderwersede-tls-certificate
